--- a/index.html
+++ b/index.html
@@ -5,9 +5,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
     <link rel="stylesheet" href="style.css" />
+    <link
+      rel="shortcut icon"
+      href="./assets/fav-timer-focus.png"
+      type="image/x-icon" />
     <title>Focus Timer 2.0</title>
+
+    <script src="script.js" defer></script>
   </head>
-  <body class="bgDarkMode">
+  <body>
     <div class="modeButton">
       <button id="moonButton">
         <svg
@@ -43,7 +49,7 @@
           <p>:</p>
           <div class="seconds">00</div>
         </div>
-        <div class="controls iconsColorDarkMode iconsControlsHoverDarkMode">
+        <div class="controls">
           <button id="play">
             <svg
               width="48"
@@ -113,8 +119,8 @@
         </div>
       </div>
       <div class="sounds-wrapper">
-        <div class="cards-wrapper iconsColorDarkMode">
-          <button class="card cardsBgDarkMode" id="forest">
+        <div class="cards-wrapper">
+          <button class="card" id="forest">
             <svg
               width="45"
               height="56"
@@ -133,7 +139,7 @@
               max="1"
               step="any" />
           </button>
-          <button class="card cardsBgDarkMode" id="rain">
+          <button class="card" id="rain">
             <svg
               width="53"
               height="56"
@@ -152,7 +158,7 @@
               max="1"
               step="any" />
           </button>
-          <button class="card cardsBgDarkMode" id="coffee">
+          <button class="card" id="coffee">
             <svg
               width="56"
               height="56"
@@ -171,7 +177,7 @@
               max="1"
               step="any" />
           </button>
-          <button class="card cardsBgDarkMode" id="flames">
+          <button class="card" id="flames">
             <svg
               width="48"
               height="56"
